service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
spec:
 type: LoadBalancer
 selector:
   app: nginx
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
